2005-12-19    <tino@firebird.03.softkill.net>

	* getopt.h (IFxxx macros): unified, to allow compile under old
	(broken) GCCs (like in SuSE 7.2).

2005-12-08    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_error), ex.h: TINO_VEXIT changed

	* exception.h (tino_throw_vstr): added to satisfy 'make test'

	* sock.h: sockaddr_gen renamed to tino_sockaddr
	(tino_sock_recv): added

2005-12-07    <tino@firebird.03.softkill.net>

	* sockbuf.h (tino_sockbuf_process): uses tino_buf_write_away

	* buf.h (tino_buf_write_away): now returns more natural result:
	the write return value.  If buffer is empty EAGAIN is set.

2005-12-05    <tino@firebird.03.softkill.net>

	* helpers.h (tino_readcmp): renamed from readcmp

	* *: started to add COPYLEFT to files

	* sockbuf.h (tino_sockbuf_name, tino_sockbuf_process,
	tino_sockbuf_new): name added

2005-12-04    <tino@firebird.03.softkill.net>

	* str.h (tino_strprefixicmp): added

2005-12-03    <tino@firebird.03.softkill.net>

	* sockbuf.h: now became useable

2005-12-02    <tino@firebird.03.softkill.net>

	* str.h (tino_strprefixcmp2_const): renamed as there now is a
	non-const-version

2005-12-01    <tino@firebird.03.softkill.net>

	* buf.h (tino_buf_write_all_1): fixed (and name), as on EOF a
	return 0 is a wrong answer. name change _1 to reflect the new
	behavior.

2005-11-30    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_new_connect, tino_sock_new_accept,
	tino_sock_select_loop): added
	(tino_sock_select): updated for new forcepoll directive

2005-10-30    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_peername): added (names peer by IP)

	* proc.h: global debugging added

	* debug.h: started with individual debug option for modules

	* str.h (tino_str_printf): added

2005-10-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (Makefile.md5): Now depends on VERSIONFILE, such
	that endless make loops hopefully are no more seen.

2005-10-09    <tino@firebird.03.softkill.net>
