@@ -1,3 +1,7 @@
+2006-01-21    <tino@firebird.03.softkill.net>
+
+	* misc_selectcopyloop.h: added into CVS
+
 2005-12-19    <tino@firebird.03.softkill.net>
 
 	* getopt.h (IFxxx macros): unified, to allow compile under old
